# ChangeLog for dev-php/onphp
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/onphp/ChangeLog,v 1.1 2005/09/03 21:38:35 voxus Exp $

*onphp-0.2.0 (03 Sep 2005)

  03 Sep 2005; Konstantin Arkhipov <voxus@gentoo.org> +onphp-0.2.0.ebuild:
  Initial import.