@@ -1,4 +1,4 @@
-MD5 4757a3f381980a52c074b194c06ca7f0 onphp-0.2.0.ebuild 631
-MD5 f78efcd9c7a33a054dd473d3a1b0f01f ChangeLog 233
+MD5 4d86e39d9de7f586c0f5aa2f002ded22 onphp-0.2.0-r1.ebuild 716
+MD5 997de146650808da4e734b280b202a44 ChangeLog 319
 MD5 cb28be74814f0f6cbf78047995f51226 metadata.xml 233
-MD5 508b034d7c6a6e761123b6b683ed2f3f files/digest-onphp-0.2.0 63
+MD5 508b034d7c6a6e761123b6b683ed2f3f files/digest-onphp-0.2.0-r1 63
