@@ -1,6 +1,12 @@
 # ChangeLog for dev-php/onphp
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/onphp/ChangeLog,v 1.1 2005/09/03 21:38:35 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/onphp/ChangeLog,v 1.2 2005/09/04 13:06:11 voxus Exp $
+
+*onphp-0.2.0-r1 (04 Sep 2005)
+
+  04 Sep 2005; Konstantin Arkhipov <voxus@gentoo.org> +onphp-0.2.0-r1.ebuild,
+  -onphp-0.2.0.ebuild:
+  Fixed RDEPEND and installation dir with regard to Stuart's feedback.
 
 *onphp-0.2.0 (03 Sep 2005)
 
